--- a/index.html
+++ b/index.html
@@ -11,20 +11,20 @@
 
     <title>Tribute to MOSF</title>
 </head>
-<body background="images/wallpaper.png">
+<body background="wallpaper.png">
     <main>
         <section>
             <header>
                 <h2>Tribute to</h2>
                 <h1 class="Trajan-gold">Maria Odette Santos Ferreira</h1>
-                <img class="pic1" src="images/Farmacia Natal (193 de 342).png">
+                <img class="pic1" src="Farmacia Natal (193 de 342).png">
             </header>
         </section>
         <section class="about">
             <p>Maria Odette Santos Ferreira was a scientist and pioneer in the fight against AIDS, playing a crucial role in the identification of the Human Immunodeficiency Virus Type 2 (HIV-2). She graduated in Pharmacy in 1970, obtained her doctoral degree at the University of Paris-Sud in 1977 and was Full Professor in Microbiology at the Faculty of Pharmacy of the University of Lisbon.  
             <br>She died in 2018 at the age of 93. Until the very end, inspired by Rita Levi-Montalcini, Nobel Prize winner, she believed that only life itself counts, not the years one has lived.
             </p>
-            <img class="pic2" src="images/pic-01.png">
+            <img class="pic2" src="pic-01.png">
         </section>
         <section class="facts_Nums">
             <h1>Facts & Numbers</h1>
