responsive mobile altered

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         </section>
         <section class="quote">
             <p>"The years don't matter, only life counts"</p>
-            <a href="#"><span><u>Learn more about <br>Odette Ferreira</u></span></a>
+            <a href="https://pt.wikipedia.org/wiki/Odette_Ferreira"><span><u>Learn more about <br>Odette Ferreira (PT)</u></span></a>
         </section>
         <section class="sources">
             <p><em>Sources:</em><u><a href="shethoughtit.ilcml.com/biography/odette-ferreira/">shethoughtit.ilcml.com</a></u></p>
