more responsive advancements

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 </div>
                 <div class="data data-3">
                     <p class="num">8</h1class="num">
-                    <p class="text">President of the CNLCS</p>
+                    <p class="text">president of the CNLCS</p>
                 </div>
         </div> 
         </section>
