more responsive atualizations

--- a/index.html
+++ b/index.html
@@ -30,14 +30,12 @@
         </section>
         <div id="about">
         <section class="about">
-            <p>Maria Odette Santos Ferreira was a scientist and pioneer in the fight against AIDS, playing a crucial role in the identification of the Human Immunodeficiency Virus Type 2 (HIV-2). She graduated in Pharmacy in 1970, obtained her doctoral degree at the University of Paris-Sud in 1977 and was Full Professor in Microbiology at the Faculty of Pharmacy of the University of Lisbon.</p>  
-            <p>She died in 2018 at the age of 93. Until the very end, inspired by Rita Levi-Montalcini, Nobel Prize winner, she believed that only life itself counts, not the years one has lived.</p>
+            <p>Maria Odette Santos Ferreira was a scientist and pioneer in the fight against AIDS, playing a crucial role in the identification of the Human Immunodeficiency Virus Type 2 (HIV-2). She graduated in Pharmacy in 1970, obtained her doctoral degree at the University of Paris-Sud in 1977 and was Full Professor in Microbiology at the Faculty of Pharmacy of the University of Lisbon. 
+            <br>She died in 2018 at the age of 93. Until the very end, inspired by Rita Levi-Montalcini, Nobel Prize winner, she believed that only life itself counts, not the years one has lived.</p>
         </section>
-        <section class="transparentImage">
             <div class="img">
                 <img class="OdetteHandsCrossed" src="images/pic-01-cut.png">
             </div>  
-        </section>
     </div>
         <section class="facts_Nums">
             <h1>Facts & Numbers</h1>
